# PyShop

./: .env_template  README.md  catalog.json  moderators.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_views.py  0003_alter_blogpost_created_at.py  0004_alter_blogpost_created_at_and_more.py
blog/templates/blog/: BlogPost_detail.html  BlogPost_form.html  BlogPost_list.html  base.html  blogpost_confirm_delete.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_test_products.py
catalog/migrations/: 0001_initial.py  0002_alter_products_options.py  0003_products_is_published.py  0004_products_owner.py
catalog/templates/: add_product.html  base.html  contacts.html  home.html  product.html  products_list.html
catalog/templates/catalog/: base.html  products_confirm_delete.html  products_detail.html  products_form.html  products_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: cmu.py  createuser.py  csu.py
users/migrations/: 0001_initial.py  0002_user_country.py  0003_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
